# gtsam_standalone

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
cpp/: 1_SimpleRotation.cpp  2_CameraResectioning.cpp  3_StereoVOExample.cpp  5_OdometryExample.cpp  ImuFactorsExample.cpp
custom_factors/: 1_fit_h_eq_y_minus_ax.cpp  2_fit_y_eq_ax_plus_b.cpp  3_fit_pose.cpp
examples/: 2_CameraResectioning.cpp  4_LocalizationExample.cpp
expression_factors/: 1_expfac_2dslam.cpp  2_expfac_fitpos2.cpp  3_expfac_exponentiallinearfit.cpp  4_axxb.cpp
pose_factors/: CustomPoint2Example.cpp  Point2c.h  Pose2GPSExample.cpp  Pose2GPSExpressionExample.cpp  Pose2SLAMExample.cpp  Pose2SLAMExpressionExample.cpp
